Replaced constructor by static method
To avoid hiding the default constructor.